Actualiza ms-citas y ms-urgencia